<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.frxs.mall.promotion</groupId>
    <artifactId>web-mall-promotion-parent</artifactId>
    <version>1.0.0</version>
    <name>web-mall-promotion-parent</name>
    <packaging>pom</packaging>
    <url>http://maven.apache.org</url>

    <modules>
        <module>web-mall-promotion</module>
    </modules>

    <properties>
        <!-- 编码 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <module.version>1.0.0</module.version>
        <frxsframework.version>1.0.5</frxsframework.version>
        <!-- spring版本号 -->
        <spring.version>5.0.7.RELEASE</spring.version>
        <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
        <!-- log4j 日志 -->
        <log4j2.version>2.11.0</log4j2.version>
        <!-- 三方框架 -->
        <aspectj.version>1.8.13</aspectj.version>
        <fastjson.version>1.2.47</fastjson.version>
        <mapstruct.version>1.2.0.Final</mapstruct.version>
        <jackson.version>2.9.3</jackson.version>
        <lmax.version>3.3.6</lmax.version>
        <lombok.version>1.18.0</lombok.version>
        <guava.version>25.1-jre</guava.version>
        <junit.version>4.12</junit.version>
        <slf4j.version>1.7.25</slf4j.version>
        <weixin-java-mp.version>2.9.0</weixin-java-mp.version>
        <caffeine.version>2.6.2</caffeine.version>
        <tracking.version>1.0.1-RELEASE</tracking.version>
        <commons-collections.version>3.2.2</commons-collections.version>
    </properties>

    <!-- repository -->
    <repositories>
        <repository>
            <id>nexus</id>
            <name>Nexus Local Repository</name>
            <url>http://nexus.frxs.cn/repository/maven-public/</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <!-- pluginRepository -->
    <pluginRepositories>
        <pluginRepository>
            <id>nexus-plugin</id>
            <name>Nexus Plugin Repository</name>
            <url>http://nexus.frxs.cn/repository/maven-public/</url>
            <snapshots>
            <enabled>false</enabled>
        </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </pluginRepository>
    </pluginRepositories>

    <!-- dependencyManagement -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.frxs.framework</groupId>
                <artifactId>frxsframework-web-bom</artifactId>
                <version>${frxsframework.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <!-- 日志文件管理包 -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-bom</artifactId>
                <version>${log4j2.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <!-- dependency -->
    <dependencies>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-runner</artifactId>
            <version>1.0.2</version>
            <scope>test</scope>
        </dependency>
        <!-- spring核心包 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-jdk8</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
            <scope>provided</scope>
            <version>${mapstruct.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>${spring-boot.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <artifactId>spring-core</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>hamcrest-core</artifactId>
                    <groupId>org.hamcrest</groupId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.github.binarywang</groupId>
            <artifactId>weixin-java-mp</artifactId>
            <version>${weixin-java-mp.version}</version>
        </dependency>

    </dependencies>

    <!-- 环境配置 -->
    <profiles>
        <!-- 开发环境 -->
        <profile>
            <id>dev</id>
            <properties>
                <profiles.activation>dev</profiles.activation>
                <!-- 业务系统 api -->
                <mall.promotion.api.version>1.5.6-SNAPSHOT</mall.promotion.api.version>
                <user.api.version>1.1.7-SNAPSHOT</user.api.version>
                <repository.id>maven-snapshots</repository.id>
                <repository.name>Frxs Nexus Snapshot Repository</repository.name>
                <repository.url>http://nexus.frxs.cn/repository/maven-snapshots/</repository.url>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <repositories>
                <repository>
                    <id>nexus-dev</id>
                    <name>Nexus Local Repository</name>
                    <url>http://nexus.frxs.cn/repository/maven-snapshots/</url>
                    <snapshots>
                        <enabled>true</enabled>
                        <updatePolicy>always</updatePolicy>
                    </snapshots>
                </repository>
            </repositories>
        </profile>

        <!-- 生产环境 -->
        <profile>
            <id>prod</id>
            <properties>
                <profiles.activation>prod</profiles.activation>
                <!-- 业务系统 api -->
                <mall.promotion.api.version>1.5.6-RELEASE</mall.promotion.api.version>
                <user.api.version>1.1.7-RELEASE</user.api.version>
                <repository.id>maven-releases</repository.id>
                <repository.name>Frxs Nexus Release Repository</repository.name>
                <repository.url>http://nexus.frxs.cn/repository/maven-releases/</repository.url>
            </properties>

            <repositories>
                <repository>
                    <id>nexus-prod</id>
                    <name>Nexus Local Repository</name>
                    <url>http://nexus.frxs.cn/repository/maven-releases/</url>
                    <releases>
                        <enabled>true</enabled>
                        <updatePolicy>always</updatePolicy>
                    </releases>
                </repository>
            </repositories>
        </profile>
    </profiles>

    <build>
        <finalName>${project.name}</finalName>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.xml</include>
                </includes>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**</include>
                </includes>
                <filtering>true</filtering>
            </resource>
        </resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.7.0</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                        <encoding>UTF-8</encoding>
                        <testIncludes>
                            <testInclude>none</testInclude>
                        </testIncludes>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>1.16.18</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultImplementationEntries>true
                                </addDefaultImplementationEntries>
                                <addDefaultSpecificationEntries>true
                                </addDefaultSpecificationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jdeps-plugin</artifactId>
                    <version>3.0.0</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>jdkinternals</goal>
                                <goal>test-jdkinternals</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.0.1</version>
                    <configuration>
                        <attach>true</attach>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>compile</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.20.1</version>
                    <configuration>
                        <argLine>-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
                        <testFailureIgnore>true</testFailureIgnore>
                        <includes>
                            <include>**/*Test*.java</include>
                        </includes>
                        <excludes/>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <developers>
        <developer>
            <name>TangMingBo</name>
            <id>MingBo.Tang</id>
            <email>tangmb@frxs.com</email>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>

    <distributionManagement>
        <repository>
            <id>maven-releases</id>
            <name>Frxs Nexus Release Repository</name>
            <url>http://nexus.frxs.cn/repository/maven-releases</url>
        </repository>
        <snapshotRepository>
            <id>maven-snapshots</id>
            <name>Frxs Nexus Snapshot Repository</name>
            <url>http://nexus.frxs.cn/repository/maven-snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>